Release 0.3.0
